# class_public

./: CMakeLists.txt  Makefile
cpp/: ClassEngine.cc  ClassEngine.hh
include/: common.h  parser.h  perturbations.h
ncdm_dump/: compile.sh  compile2.sh  dump_ncdm_perturb.cpp  neutrino_example.ini  read_dump.cpp  run_example.sh
ncdm_dump/output/: neutrino_example00_parameters.ini
source/: background.c  input.c  perturbations.c  transfer.c
test/: test_degeneracy.c  test_loops.c  test_loops_omp.c  test_optimize_1D.c
tools/: hyperspherical.c  parser.c
